# OceanOS

./: .gitignore  CHANGELOG.md  HERMESOS.md  HermesOS.bat  OCEANOS.md  OceanOS.bat  README.md  Run-HermesTask.ps1  Run-OceanTask.ps1  SECURITY.md  bootstrap.ps1  build_report.py  docker-compose.user.yml.txt  electron-builder.yml  electron.vite.config.ts  install.py  package-lock.json  package.json  tsconfig.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
docs/: ELF.md  LAUNCH.md  PLAN.md  server.md
electron/: main.js  package-lock.json  package.json
electron-legacy/main/: askpass.ts  attachment-staging.ts  config-health.ts  config.ts  gpu-fallback.ts  index.ts  installer.ts  kanban.ts  media.ts  messaging-platforms.ts  model-discovery.ts  ocean-auth.ts  ocean.ts  processes.ts  profiles.ts  provider-registry.ts  registry.ts  run-stream.test.ts  run-stream.ts  skills.ts  sse-parser.ts  ssh-remote.ts  ssh-tunnel.ts  sudoCreds.ts  tools.ts  utils.ts  yaml-path.ts
electron-legacy/preload/: index.ts
registery/: MANIFEST_SPEC.md  api.py  browser.py  github.py  guardrails.py  memory.py  portfolio.py  processes.py  sandbox.py
registry/: MANIFEST_SPEC.md  api.py  browser.py  github.py  guardrails.py  notifications.py  portfolio.py  processes.py  sandbox.py
scripts/: make_icon.py  telegram_notify.py  telegram_test_raw.py
skills/browser-automation-playwright/: SKILL.md  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  preload.js  skills.rs
ui/: index.html
(+308 files in other folders)
